# LLTM

./: .gitignore  1  MANIFEST.md  PAPER_PLAN.md  PAPER_PLAN_20260630_211834.md  PAPER_PLAN_20260701_172437.md  PAPER_PLAN_20260701_182526.md  PAPER_PLAN_20260701_220901.md  PAPER_PLAN_20260701_231457.md
anomllm-compare/: compare_results.json  eval_metrics.py  gen_data.py  lafr_qwen_compare_results.json  lafr_qwen_edit_compare_results.json  lafr_qwen_edit_smoke.json  lafr_qwen_smoke.json  lafr_qwen_token_policy_compare_results.json  lafr_qwen_trend_policy_results.json  lafr_standalone_subset.json  run_compare.py  run_lafr_qwen_compare.py  run_llm_local.py  web_demo.py
anomllm-compare/anomllm/: .gitignore  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml  synthesize.sh  test.sh
anomllm-compare/anomllm/.github/workflows/: flake8-lint.yml  validate.yml
anomllm-compare/anomllm/notebook/: affiliation.ipynb  example.ipynb
anomllm-compare/anomllm/src/: batch_api.py  config.py  gemini_api.py  online_api.py  openai_api.py  prompt.py  result_agg.py  utils.py
anomllm-compare/anomllm/src/baselines/: isoforest.py
anomllm-compare/anomllm/src/data/: synthetic.py
anomllm-compare/web/: app.js  index.html  styles.css
experiments/: lafr_encoder.py  lafr_eval.py  lag_readout_probe.py  llm_adapter.py  llm_compare.py  llm_cot_compare.py  llm_fulltext.py  llm_qualitative.py  mg_lafr_forecast.py  mg_llm_adapter.py  mg_llm_explain.py
mg_llm_track/: README.md
results/mg_lafr_forecast/: metrics.json
results/mg_lafr_forecast_fixedlead/: metrics.json
(+12 files in other folders)
