[tool.poetry]
name = "AnomLLM"
version = "1.0.0"
description = "We challenge common assumptions about Large Language Models' capabilities in time series understanding. "
authors = ["Zihao Zhou <ziz244@ucsd.edu>"]

[tool.poetry.dependencies]
affiliation = {git = "https://github.com/ahstat/affiliation-metrics-py.git"}
python = "^3.10,<3.11"
numpy = "1.21.6"
pandas = "1.3.5"
matplotlib = "3.5.3"
scipy = "1.7.3"
torch = "2.4.0"
tsfresh = "0.8.1"
statsmodels = "0.13.2"
openai = "1.37.1"
google-generativeai = "0.7.2"
loguru = "0.7.2"
pydantic = "2.8.2"
httpx = "0.27.0"
beautifulsoup4 = "4.12.3"
networkx = "3.3"

[tool.poetry.dev-dependencies]
ipykernel = "6.29.5"
jupyter = "^1.0"

[tool.poetry.group.dev.dependencies]
nbconvert = "^7.16.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
